Sat Dec  7 11:15:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_reject): copy unrejected elements only to new hash,
	  so that the change on the original receiver can affect.
	  [ruby-core:58914] [Bug #9223]

Sat Dec  7 08:25:00 2013  Richo Healey  <richo@psych0tik.net>

	* test/ruby/test_struct.rb: Add regression test for question marks and
	  bangs in struct members. [Closes GH-468]

Fri Dec  6 19:33:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_extract_keywords, rb_get_kwargs): move from
	  vm_insnhelper.c.

Fri Dec  6 19:18:02 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change oldmalloc meaning.
	  Increase oldmalloc_increase with malloc_increase
	  instead of using obj_memsize_of().

	  This change will avoid the danger of memory full without major GC.

Fri Dec  6 19:08:48 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (atomic_sub_nounderflow): not 0 but val itself.

Fri Dec  6 18:37:11 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_alloc, Init_heap): initialize
	  oldmalloc_increase_limit at Init_heap.

	  rb_objspace_alloc() is not called on some platforms.

Fri Dec  6 18:33:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): bug fix.
	  initialize after recording.

Fri Dec  6 17:49:46 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (atomic_sub_nounderflow): added to simplify atomic sub with
	  care about underflow.

	* gc.c (objspace_malloc_increase): use it.

Fri Dec  6 17:10:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (rb_get_kwargs): get keyword argument values from an
	  option hash, not only checking keys.

	* dir.c (dir_initialize): use rb_get_kwargs.

	* gc.c (gc_start_internal): ditto.

Fri Dec  6 16:47:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-brace-to-do-end): split single line block.

	* misc/ruby-mode.el (ruby-do-end-to-brace): shrink single line block
	  to one line.
